fix(#5894): bound Bolt WebSocket frame length and Postgres bind-parameter length before allocation (#5920)
* fix(#5894): bound Bolt WebSocket frame length and Postgres bind-parameter length before allocation

BoltWebSocketInputStream read a 64-bit, client-supplied, unauthenticated frame
length off the wire and allocated a byte array sized by it directly, so a
handful of bytes declaring a multi-gigabyte length triggered an
allocation-driven OOM before the Bolt handshake or authentication.

PostgresNetworkExecutor.bindCommand() had the same shape for a Bind message's
declared parameter length, reachable by an authenticated client.

Both now reject a declared length above a configurable ceiling
(arcadedb.bolt.websocket.maxFrameSize, arcadedb.postgres.maxParamSize;
default 16MB each) before allocating.

* fix: handle Postgres Bind NULL-parameter sentinel before the max-size guard

The wire protocol encodes a NULL bind parameter as a declared length of -1
(0xFFFFFFFF unsigned), with no value bytes following. Read through
ChannelBinary.readUnsignedInt(), that sentinel is always far larger than any
realistic max-param-size limit, so the new bound check added for #5894 was
rejecting every NULL-valued bind parameter as "too large" instead of binding
it as NULL - previously this crashed the same way with
NegativeArraySizeException, now surfaced as a hang via the drain-recovery
path since a well-behaved client never sends filler bytes for an error it
doesn't know occurred.

Both the main bind-parsing path and the error-recovery drain path now
special-case the sentinel before the size check. Also aligned the drain
path's "too large" message with the main path's (includes the configured
max).

* fix: close the connection instead of attempting a resync on an oversized Bind parameter

The too-large branch added for #5894 threw after the parameter's length
prefix was consumed but before its value bytes were read, without advancing
paramsConsumed. The catch block's own recovery drai